Added text and css file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Intro to CSS</title>
   </head>
   <body>
-
+    <h1>Intro to CSS</h1>
+    <p>Some texty stuff and things and text and junk</p>
 
 
 
