--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Intro to CSS</title>
+    <link href="css/main-css" rel="stylesheet">
   </head>
   <body>
     <h1>Intro to CSS</h1>
