changed font styles, got font from google, added
list

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Intro to CSS</title>
-    <link href="css/main-css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <h1>Intro to CSS</h1>
     <p>Some texty stuff and things and text and junk</p>
+    <ol>
+      <li>T-Rex</li>
+      <li>Stegosaurus</li>
+      <li>Apqtosaurus</li>
+    </ol>
 
 
 
