--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <h1>Intro to CSS</h1>
+    <h2>Fiercest Dinosaurs</h2>
     <p>Some texty stuff and things and text and junk</p>
+    <p> This is a link: <a href="#">Link me!</a></p>
     <ol>
       <li>T-Rex</li>
       <li>Stegosaurus</li>
